Some changes have been made

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
 <div>this is a testing html file</div>
 <div>this changes are made by TANYA </div>
+<div>This changes are made by Rajesh</div>
 </body>
 </html>
